assets/styles/style.css
/* ... */
body.loading .committee-header{
	opacity: 0;
}
	.committee-header{
		transition: opacity .3s ease-in-out;
		transition-delay: .05s;
	}

body.loading .dc-site-contents,
body.loading .layer{
	opacity: 0;
}
	.dc-site-contents,
	.layer{
		transition: opacity .3s ease-in-out;
		transition-delay: .05s;
	}

body.loading .handle{
	opacity: 1;
	pointer-events: all;
}
	body.loading .handle .indicator{
		opacity: 0;
	}
	.handle{
		transition-delay: 1s;
	}
	/*body.loading .handle:after{
		background: #000000;
		transition: all .13s ease-in-out;
	}*/
		 .handle:after{
			 transition: all .2s linear;
			 transition-delay: 0;
		 }

		 .quadrant-section{
			 border: none !important;
		 }

		 .quadrant-section[data-section-location="nw"],
		 .quadrant-section[data-section-location="se"]{
			 -webkit-box-shadow: inset 0px 0px 0.5px 0.25px rgba( 200, 200, 200, 0.9 ),
 														inset 0px 0px 15px 3px rgba(163,163,163,0.85);
 				 -moz-box-shadow: inset 0px 0px 0.5px 0.25px rgba( 200, 200, 200, 0.9 ),
 											 			inset 0px 0px 15px 3px rgba(163,163,163,0.85);
 							box-shadow: inset 0px 0px 0.5px 0.25px rgba( 200, 200, 200, 0.9 ),
 														inset 0px 0px 15px 3px rgba(163,163,163,0.85);

		 }
		 .quadrant-section[data-section-location="ne"],
		 .quadrant-section[data-section-location="sw"]{
			 -webkit-box-shadow: inset 0px 0px 0.5px 0.25px rgba( 200, 200, 200, 0.9 ),
 														inset 0px 0px 15px 3px rgba(163,163,163,0.85);
 				 -moz-box-shadow: inset 0px 0px 0.5px 0.25px rgba( 200, 200, 200, 0.9 ),
 											 			inset 0px 0px 15px 3px rgba(163,163,163,0.85);
 							box-shadow: inset 0px 0px 0.5px 0.25px rgba( 200, 200, 200, 0.9 ),
 														inset 0px 0px 15px 3px rgba(163,163,163,0.85);
		 }

		 .handle .indicator{
			 display: none !important;
		 }

		 /*body.loading .handle:after{
			 background: rgba(163,163,163,0.4);
			 -webkit-box-shadow: 0px 0px 0.5px 0.25px rgba( 200, 200, 200, 0.9 ),
 													 0px 0px 15px 3px rgba(163,163,163,0.85);
 				 -moz-box-shadow:  0px 0px 0.5px 0.25px rgba( 200, 200, 200, 0.9 ),
 											 		 0px 0px 15px 3px rgba(163,163,163,0.85);
 							box-shadow:  0px 0px 0.5px 0.25px rgba( 163,163,163, 0.9 ),
 													 0px 0px 15px 3px rgba(163,163,163,0.85);
		 }*/

		/*.handle__x:after{
			background: #FFFFFF;
			-webkit-box-shadow: 0px 0px 0.5px 0.25px rgba( 200, 200, 200, 0.9 ),
														0px 0px 10px 3px rgba(163,163,163,0.85);
				 -moz-box-shadow: 0px 0px 0.5px 0.25px rgba( 200, 200, 200, 0.9 ),
											 			0px 0px 10px 3px rgba(163,163,163,0.85);
							box-shadow: 0px 0px 0.5px 0.25px rgba( 200, 200, 200, 0.9 ),
														-1px 0px 16px 3px rgba(255,255,255,0.85),
														1px 0px 16px 3px rgba(0,0,0,0.85);
		}*/

			.theme,
			.theme .theme--image-cover,
			.theme--content{
				-webkit-box-shadow: inset 0px 0px 0.5px 0.25px rgba( 255, 255, 255, 0.9 ),
															inset 0px 0px 10px 3px rgba(100,100,100,0.85);
					 -moz-box-shadow: inset 0px 0px 0.5px 0.25px rgba( 255, 255, 255, 0.9 ),
												 			inset 0px 0px 10px 3px rgba(100,100,100,0.85);
								box-shadow: inset 0px 0px 0.5px 0.25px rgba( 255, 255, 255, 0.9 ),
															inset 0px 0px 10px 3px rgba(100,100,100,0.85);
			}

				.theme--content:before,
				.theme--content:after{
					content: '';
					position: absolute;
					top: -11px;
					left: 0px;
					right:0px;
					//outline: 1px solid lime;
					background: #ffffff;
					height: 25px;
					border-radius: 0 0 22px 22px;
					filter: blur( 3px );
					transition: opacity .13s ease-out;
				}
					.theme .theme--content:after{
						top: auto;
						bottom: -18px;
						border-radius: 13px 13px 0 0;
						z-index: 0;
					}
						.theme__network-ensemble .theme--content:after{
							bottom: -22px;
						}

					.theme.theme__offshore-studies.locked .theme--content:before{
						opacity: 0;
					}
				.theme__network-ensemble .theme--content:before,
				.theme__network-ensemble .theme--content:after{
					background: #000000;
				}
				.theme__network-ensemble,
				.theme__network-ensemble .theme--image-cover,
				.theme__network-ensemble .theme--content{
					-webkit-box-shadow: inset 0px 0px 0.5px 0.25px rgba( 0, 0, 0, 0.9 ),
																inset 0px 0px 10px 3px rgba(180,180,180,0.85);
						 -moz-box-shadow: inset 0px 0px 0.5px 0.25px rgba( 0, 0, 0, 0.9 ),
																inset 0px 0px 10px 3px rgba(180,180,180,0.85);
									box-shadow: inset 0px 0px 0.5px 0.25px rgba( 0, 0, 0, 0.9 ),
																inset 0px 0px 10px 3px rgba(180,180,180,0.85);
				}


				.theme .theme--content .theme--leader{
					border-bottom: 1px solid #000000;
				}
				.theme.theme__network-ensemble .theme--content .theme--leader{
					border-bottom: 1px solid #ffffff;
				}
				.theme.theme__network-ensemble.locked .theme--content{
					border-top: 1px solid #ffffff;
				}

			.dc-slideshow .dc-slideshow--prev:after,
			.dc-slideshow .dc-slideshow--next:after{
				filter: blur( 3px );
				transition: filter .3s ease-in;
			}
			.dc-slideshow .dc-slideshow--prev:hover:after,
			.dc-slideshow .dc-slideshow--next:hover:after{
				filter: blur( 0 );
			}

			.wysiwyg a,
			a.text-link,
			.wysiwyg a img{
				transition: filter .3s ease-in;
			}
			.wysiwyg a:hover,
			a.text-link:hover,
			.wysiwyg a:hover img{
				filter: blur( 10px );
				transition: filter .3s ease-in;
			}
	.about-wrapper{
		overflow: hidden;
	}
	.about-wrapper .about--content{
		height: calc( 100% + 1em );
		border-left: none;
		-webkit-box-shadow: 0 0 15px 3px rgba( 255, 255, 255, 0.4 ),
												inset 0 0 15px 3px rgba( 255, 255, 255, 0.4 );
			 -moz-box-shadow: 0 0 15px 3px rgba( 255, 255, 255, 0.4 ),
												inset 0 0 15px 3px rgba( 255, 255, 255, 0.4 );
						box-shadow: 0 0 15px 2px rgba( 255, 255, 255, 0.4 ),
												inset 0 0 15px 3px rgba( 255, 255, 255, 0.4 );
	}

	.page-template-page-about .committee-header{
		background: transparent
	}
			.committee-header{
				//background: transparent;
			}
/* ... */

